--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -117,7 +117,20 @@
                 <div class="div-loan">
                   <%= link_to new_car_loan_path('step1'), method: :get, class: "img-text" do %>
                     <i class="fa fa-6x fa-car"></i>
-                    <span>Car Loan</span>
+                    <span>New Car Loan</span>
+                  <% end %>
+                  <div class="loan-img5"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-xs-12 margin-bottom-none">
+            <div class="flip margin-bottom-30">
+              <div class="card scroll_effect bounceInRight">
+                <div class="div-loan">
+                  <%= link_to used_car_loan_path('step1'), method: :get, class: "img-text" do %>
+                    <i class="fa fa-6x fa-car"></i>
+                    <span>Used Car Loan</span>
                   <% end %>
                   <div class="loan-img5"></div>
                 </div>
@@ -143,7 +156,7 @@
                 <div class="div-loan">
                   <%= link_to loan_against_property_path('step1'), method: :get, class: "img-text" do %>
                     <i class="fa fa-6x fa-building-o"></i>
-                    <span>Home Loan</span>
+                    <span>Loan Against Property</span>
                   <% end %>
                   <div class="loan-img4"></div>
                 </div>
@@ -160,25 +173,30 @@
       <section class="row car-block-wrap padding-loans">
         <div class="owl-carousel cards">
           <div class="col-sm-12 col-xs-12 margin-bottom-none">
-            <div class="scroll_effect bounceInUp img-hdfc-card">
+            <div class="scroll_effect img-effect bounceInUp">
               <%= image_tag "hdfc-bank.png" %>
             </div>
           </div>
           <div class="col-sm-12 col-xs-12 margin-bottom-none">
-            <div class="scroll_effect bounceInUp img-indus-card">
+            <div class="scroll_effect img-effect bounceInUp">
               <%= image_tag "IndusInd-bank.png" %>
             </div>
           </div>
           <div class="col-sm-12 col-xs-12 margin-bottom-none">
-            <div class="scroll_effect bounceInUp img-sbi-card">
+            <div class="scroll_effect img-effect bounceInUp">
               <%= image_tag "sbi-bank.png" %>
             </div>
           </div>
           <div class="col-sm-12 col-xs-12 margin-bottom-none">
-            <div class="scroll_effect bounceInUp">
+            <div class="scroll_effect img-effect bounceInUp">
               <%= image_tag "rbl-bank.png" %>
             </div>
-          </div>          
+          </div>
+          <div class="col-sm-12 col-xs-12 margin-bottom-none">
+            <div class="scroll_effect img-effect bounceInUp">
+              <%= image_tag "yes-bank.png" %>
+            </div>
+          </div>
         </div>
       </section>
       <div class="row">
@@ -211,40 +229,40 @@
       </div>
       <section class="padding-loans">
         <div class="row owl-carousel partners">
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "hdfc-bank.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "idfc-bank.gif"%>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "yes-bank.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "tata-capital.webp"%>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "icici-bank.png"%>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "axis-bank.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp" style="background-color: #e88244;">
             <%= image_tag "aditya-birla.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "dbs_bank.svg"%>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp" style="background-color: #000000;">
             <%= image_tag "bajaj-logo.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "fllutoran.png" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "au-bank.webp" %>
           </div>
-          <div class="scroll_effect bounceInUp">
+          <div class="scroll_effect img-effect bounceInUp">
             <%= image_tag "hero.png" %>
           </div>
         </div>
@@ -253,23 +271,29 @@
         <div class="row">
           <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body crd-parts">
+                <div>
+                  <%= image_tag "associalted-partners.jpg" %>
+                </div>
                 <h3>50 + Partners</h3>
                 <h4>&</h4>
                 <h3>Over 100 Products</h3>
-                <h3>
+                <h4>
                   Disburse Loans worth 30 crore on an annulized basis
-                </h3>
+                </h4>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body crd-sat-cust">
+                <div>
+                  <%= image_tag "customers.jpeg" %>
+                </div>
                 <h3>Satisfied Custmers</h3>
                 <h2>1000</h2>
-                <h3>Secured Systems</h3>
-                <h3>To Keep your data safe</h3>                
+                <h4>Secured Systems</h4>
+                <h4>To Keep your data safe</h4>
               </div>
             </div>
           </div>
