--- a/app/views/loan_against_property/step2.html.erb
+++ b/app/views/loan_against_property/step2.html.erb
@@ -14,38 +14,23 @@
         </div>
     </div>
 </section>
-<section class="business-loan-section">
-  <%= form_for @loan_against_property_offer, :url => { :action => @loan_against_property_offer.id.nil? ? "create_against_property_offer" : "update_against_property_offer"}, html: {id:  "loan_against_property_offer", class: "loan_against_property_offer"} do |f| %>
+<section class="personal-loan-section custom-container">
+  <%= form_for @loan_against_property, :url => { :action => @loan_against_property.id.nil? ? "update_otp_status" : "update_otp_status"}, html: {id:  "otp_loan_against_property", class: "otp_loan_against_property"} do |f| %>
     <div class="container">
       <div class="row">
+        <div class="col-md-4"></div>
         <div class="col-md-4">
           <div class="form-group">
-            <span>Loan Amount (Rs.) <span>*</span></span>
-            <%= f.select(:loan_amount, home_loan_amount, class: "form-control") %>
-            <p class="error"><%= show_errors(@loan_against_property_offer, :loan_amount) %></p>
+            <h3>Verify OTP</h3>
           </div>
           <div class="form-group">
-            <span>Employment Type <span>*</span></span>
-            <%= f.text_field(:employment_type, class: "form-control") %>
-            <p class="error"><%= show_errors(@loan_against_property_offer, :employment_type) %></p>
-          </div>
-          <div class="form-group">
-            <span>City <span>*</span></span>
-            <%= f.select(:city, cities,class: "form-control") %>
-            <p class="error"><%= show_errors(@loan_against_property_offer, :city) %></p>
-          </div>
-          <div class="form-group">
-            <span>Annual Income (Rs.) <span>*</span></span>
-            <%= f.number_field(:annual_income,  step: 0.5, class: "form-control") %>
-            <p class="error"><%= show_errors(@loan_against_property_offer, :annual_income) %></p>
-          </div>
-          <div class="form-group">
-            <span>Mobile Number <span>*</span></span>
-            <%= f.text_field(:mobile_number, class: "form-control") %>
-            <p class="error"><%= show_errors(@loan_against_property_offer, :mobile_number) %></p>
-          </div>
+            <span>OTP <span>*</span></span>
+            <%= f.number_field(:otp, class: "form-control", value: "") %>
+          </div> 
           <button type="submit" class="btn btn-default">Submit</button>
+          <a href="javascript:void(o)" id="resend-otp" style="float: right;">Resend</a>
         </div>
+        <div class="col-md-4"></div>
       </div>
     </div>
   <%end%>
