--- a/app/views/personal_loan/step2.html.erb
+++ b/app/views/personal_loan/step2.html.erb
@@ -25,7 +25,7 @@
           </div>
           <div class="form-group">
             <span>OTP <span>*</span></span>
-            <%= f.text_field(:otp, class: "form-control", value: "") %>
+            <%= f.number_field(:otp, class: "form-control", value: "") %>
           </div> 
           <button type="submit" class="btn btn-default">Submit</button>
           <a href="javascript:void(o)" id="resend-otp" style="float: right;">Resend</a>
