--- a/app/views/professional_loan/step2.html.erb
+++ b/app/views/professional_loan/step2.html.erb
@@ -3,7 +3,7 @@
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <h2>New Professional Loan</h2>
-                <h4>Apply for new brofessional loan</h4>
+                <h4>Apply for new professional loan</h4>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <ul class="breadcrumb">
@@ -14,55 +14,24 @@
         </div>
     </div>
 </section>
-
-  <%= form_for @professional_loan_offer, :url => { :action => @professional_loan_offer.id.nil? ? "create_professional_offer" : "update_professional_offer" }, html: {id:  "professional_loan_offer", class: "professional_loan_offer"} do |f| %>
+<section class="personal-loan-section custom-container">
+  <%= form_for @professional_loan, :url => { :action => @professional_loan.id.nil? ? "update_otp_status" : "update_otp_status"}, html: {id:  "otp_professional_loan", class: "otp_professional_loan"} do |f| %>
     <div class="container">
-      <div class="row"> 
+      <div class="row">
+        <div class="col-md-4"></div>
         <div class="col-md-4">
           <div class="form-group">
-            <span>Bank Account Name <span>*</span></span>
-            <%= f.select(:bank_account_name, bank_name, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :bank_account_name) %></p>
+            <h3>Verify OTP</h3>
           </div>
           <div class="form-group">
-            <span>Current EMI <span>*</span></span>
-            <%= f.number_field(:current_emi, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :current_emi) %></p>
-          </div>
-          <div class="form-group">
-            <span>Full Name <span>*</span></span>
-            <%= f.text_field(:full_name, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :full_name) %></p>
-          </div>
-          <div class="form-group">
-            <span>Gender <span>*</span></span>
-            <%= f.select(:gender, gender, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :gender) %></p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Pincode <span>*</span></span>
-            <%= f.text_field(:pincode, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :pincode) %></p>
-          </div>
-          <div class="form-group">
-            <span>Pancard <span>*</span></span>
-            <%= f.text_field(:pancard, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :pancard) %></p>
-          </div>
-          <div class="form-group">
-            <span>DOB <span>*</span></span>
-            <%= f.date_field(:dob, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :dob) %></p>
-          </div>
-          <div class="form-group">
-            <span>Residence Type <span>*</span></span>
-            <%= f.select(:residence_type, residence_type, class: "form-control") %>
-             <p class="error"><%= show_errors(@professional_loan_offer, :residence_type) %></p>
-          </div>
+            <span>OTP <span>*</span></span>
+            <%= f.number_field(:otp, class: "form-control", value: "") %>
+          </div> 
           <button type="submit" class="btn btn-default">Submit</button>
+          <a href="javascript:void(o)" id="resend-otp" style="float: right;">Resend</a>
         </div>
+        <div class="col-md-4"></div>
       </div>
     </div>
   <%end%>
+</section>
