--- a/app/views/used_car_loan/step4.html.erb
+++ b/app/views/used_car_loan/step4.html.erb
@@ -15,4 +15,21 @@
     </div>
 </section>
 
-<h1>Thank you for applying for used car loan</h1>
+<%= form_for @used_car_loan_offer, :url => { :action => @used_car_loan_offer.id.nil? ? "create_used_car_offer" : "update_used_car_offer" }, html: { id:  "used_car_loan_offer", class: "used_car_loan_offer" } do |f| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>New Car Loan Offer</h3>
+      </div>
+    </div>      
+    <div class="row"> 
+      <div class="col-md-4">
+        <div class="form-group">
+          <span>Name <span>*</span></span>
+          <%= f.text_field(:name, class: "form-control") %>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </div>
+<%end%>
